[package]
name = "traderust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bisection = "0.1.0"
bucket_queue = "2.0.0"
cairo-rs = { version = "0.15.11", features = ["pdf"] }
clap = { version = "3.1.17", features = ["derive"] }
clap-verbosity-flag = "1.0.0"
elementtree = "0.7.0"
lazy_static = "1.4.0"
log = "0.4.17"
ndarray = { version = "0.15.4", features = ["serde", "rayon"] }
rand = "0.8.5"
rayon = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
tempfile = "3.3.0"
url = "2.2.2"

[dev-dependencies]
rstest = "0.12.0"
